# traffic-light-governance

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js
.github/actions/azure-container-deploy/: action.yml
.github/actions/databricks-deploy/: action.yml
.github/scripts/: databricks_deployer.py  gatekeeper.py  model_registry.py  notify_backend.py
.github/workflows/: README.md  azure_deploy.yml  ci_cd_pipeline.yml  deploy_dashboard.yml  example-caller.yml  gatekeeper.yml  reusable-ci-cd-pipeline.yml  reusable-gatekeeper.yml
api/: auth.py  config.py  database.py  index.py  models.py  schemas.py  seed_data.py  sse_manager.py
api/routers/: deployments.py  gatekeeper.py  metrics.py  models.py  pipelines.py  webhooks.py
api/services/: analytics.py
databricks/jobs/: etl.yaml
databricks/notebooks/: notebook.py
docker/: Dockerfile
src/: App.css  App.jsx  index.css
src/components/Charts/: AreaChart.jsx  BarChart.jsx  DonutChart.jsx  RadarChart.jsx  Sparkline.jsx
src/components/Common/: EmptyState.jsx  StatusDot.jsx  Toast.jsx  Tooltip.jsx
src/components/Dashboard/: DORAMetrics.jsx  DeploymentChart.jsx  LiveActivityFeed.jsx  ModelPromotionFlow.jsx  PipelineTimeline.jsx  SecurityRadar.jsx  StatCard.jsx  TrafficLightBadge.jsx
src/components/Layout/: Header.jsx  Layout.jsx  Sidebar.jsx
src/hooks/: useApi.js  useAutoRefresh.js  useSSE.js
src/utils/: api.js  constants.js  formatters.js
tests/: conftest.py  test_auth.py  test_gatekeeper.py  test_webhooks.py
(+10 files in other folders)
